# oh-my-opencode-slim

./: AGENTS.md  README.md  oh-my-opencode-slim.schema.json  package.json
.github/workflows/: companion-release.yml
companion/: Cargo.toml
docs/: companion.md  configuration.md  goal.md  hooks-reference.md  multiplexer-integration.md  tools.md
src/: codemap.md  index.ts
src/agents/: orchestrator.ts
src/cli/: background-subagents.test.ts  cache.test.ts  companion.ts  config-io.ts  index.ts  install.ts  providers.test.ts  providers.ts  skills.test.ts  skills.ts  types.ts
src/companion/: manager.test.ts  manager.ts
src/config/: constants.ts  loader.ts  schema.ts
src/council/: council-manager.ts
src/hooks/: image-hook.ts  index.ts
src/hooks/apply-patch/: matching.ts  prepared-changes.ts  resolution.ts
src/hooks/auto-update-checker/: index.ts
src/hooks/foreground-fallback/: index.test.ts  index.ts
src/hooks/task-session-manager/: index.test.ts  index.ts
src/hooks/todo-continuation/: index.test.ts  index.ts
src/hooks/workflow-planning/: index.test.ts  index.ts
src/interview/: dashboard.ts  document.ts  manager.ts  server.ts  service.ts  ui.ts
src/mcp/: context7.ts
src/multiplexer/: codemap.md  session-manager.test.ts  session-manager.ts
src/multiplexer/tmux/: index.ts
src/tools/: cancel-task.test.ts  cancel-task.ts  codemap.md  index.ts
src/utils/: errors.test.ts  errors.ts  session-manager.test.ts  session-manager.ts  session.ts
src/workflow/: executor.test.ts  executor.ts  index.ts  parser.test.ts  parser.ts  types.ts
(+2 files in other folders)
